--- a/_layouts/post_mine.html
+++ b/_layouts/post_mine.html
@@ -2,11 +2,12 @@
 layout: mine
 ---
 <div class="post">
-
+<!-- 
   <header class="post-header">
-    <!-- <h1 class="post-title">{{ page.title }}</h1> -->
+    <h1 class="post-title">{{ page.title }}</h1> 
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
+-->
 
   <article class="post-content">
     {{ content }}
